--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members=["hw_1", "hw_2", "hw_3", "hw_4", "hw_5", "hw_6"]
+members=["hw_1", "hw_2", "hw_3", "hw_4", "hw_5", "hw_6", "hw_7"]
